更新 hello-word.mdx

--- a/src/pages/posts/hello-word.mdx
+++ b/src/pages/posts/hello-word.mdx
@@ -14,8 +14,14 @@ tags: ["astro", "blogging", "learning in public"]
 
 ``` json
 {
-	title:Hello Word
-	date:2024-08-12
-	author:Mr.Yuan
+    title:Hello Word
+    date:2024-08-12
+    author:Mr.Yuan
 }
 ```
+
+这是 Cloudflare R2+CDN 测试图
+
+![img1.jpg](https://res.jb18.cm/img/2024/08/11/f11615b7fb9368e6b7f88377b13bc013.jpg)
+
+
