--- a/src/pages/posts/post1.mdx
+++ b/src/pages/posts/post1.mdx
@@ -12,14 +12,20 @@ tags: ["astro", "blogging", "learning in public"]
 
 import { Code } from 'astro:components';
 
+通过 Astro MDX 集成，你可以在你的 src/pages/ 目录下添加 .mdx 文件来添加 MDX 页面到你的项目。你也可以导入 .mdx 文件到 .astro 文件。
 
+Astro 的 MDX 集成为标准的 MDX 增加了额外的功能，包括 Markdown 风格的 frontmatter。这允许你使用大部分 Astro 的内置 Markdown 功能，比如一个特殊的 frontmatterlayout 属性。
 
-# Heading (rank 1)
-## Heading 2
-### 3
-#### 4
-##### 5
-###### 6
+在我们的 Markdown & MDX 指南中可以看到 MDX 在 Astro 中的工作原理和例子。
+
+访问 MDX 文档，了解使用标准 MDX 功能的情况。
+
+# 这是我 Astro 博客的第一篇文章。
+## 这是我 Astro 博客的第一篇文章。
+### 这是我 Astro 博客的第一篇文章。
+#### 这是我 Astro 博客的第一篇文章。
+##### 这是我 Astro 博客的第一篇文章。
+###### 这是我 Astro 博客的第一篇文章。
 
 > Block quote
 
