--- a/src/content/blog/test.mdx
+++ b/src/content/blog/test.mdx
@@ -2,10 +2,18 @@
 title: '主题配置测试'
 date: 2024-11-09
 img: [
-    [
+    {
         url: 'https://docs.astro.build/assets/rose.webp',
         alt: '封面图片'
-    ],
+    },
+    {
+        url: 'https://docs.astro.build/assets/rose.webp',
+        alt: '封面图片'
+    },
+    {
+        url: 'https://docs.astro.build/assets/rose.webp',
+        alt: '封面图片'
+    },
 ]
 
 draft: false
