--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -3,14 +3,37 @@ layout: "../layouts/MarkdownLayout.astro"
 title: "关于"
 ---
 
-首先欢迎来访小站，我是业余的编码爱好者，目前对 PHP 的 ThinkPHP 和 Laravel 框架很熟练，现在主要学习 前端，因为 PHP 对我这个业余选手没太大用。
+首先欢迎来访小站，我是业余的编码爱好者，主要学习 PHP 现在逐步转向前端。在地址栏打开 api 地址输出 json 那一刻真的很酷。学习前端是想手搓属于自己的数字空间，有一方立足之地。
 
-正如本站的 `title` 一样，你可以叫我 小袁 或 袁某，更多请移步[我的主页](https://wo.jb18.cm)。
+正如本站的 `title` 一样，你可以叫我 小袁 或 袁某。
+
+[个人主页](https://wo.jb18.cm)
+
+[now](/now)
+
+``` md
+//名称
+- 袁某人
+
+//地址
+- https://jb18.cm
+
+//头像[邮箱MD5]
+- 163c02d8a683b4e139c4b1f53cbe9c3d / 5fbb13b635295d1226a17b782951c309
+```
 
 ---
 
 #### 本站
 
 请访问  [/colophon](/colophon)
+
+---
+
+#### 联系
+
+我还是更喜欢发邮件的方式。
+
+- [wo@jb18.cm](mailto:wo@jb18.cm)
 
 
