--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -7,20 +7,11 @@ title: "关于"
 
 正如本站的 `title` 一样，你可以叫我 小袁 或 袁某。
 
-[个人主页](https://wo.jb18.cm)
+访问我的 [个人主页](https://wo.jb18.cm)，或看看我 [正在](/now) 干什么。
 
-[now](/now)
-
-``` md
-//名称
-- 袁某人
-
-//地址
-- https://jb18.cm
-
-//头像[邮箱MD5]
-- 163c02d8a683b4e139c4b1f53cbe9c3d / 5fbb13b635295d1226a17b782951c309
-```
+- `袁某人`
+- `https://jb18.cm`
+- `163c02d8a683b4e139c4b1f53cbe9c3d / 5fbb13b635295d1226a17b782951c309`
 
 ---
 
