--- a/src/pages/colophon.mdx
+++ b/src/pages/colophon.mdx
@@ -11,8 +11,22 @@ title: "Colophon"
 
 截至 24/11/24 这个网站已经编写半年之久，一半时间都呆在文件夹吃灰，期间模仿了众多网站创建了多个项目，最后全部推到重来按照自己的想法重新构建，基本都是参照 Astro 官方文档亲手敲出每行代码。
 
+#### 评论
+
+Giscus 是一个用 GitHub Discussions 实现评论的系统，你必须登录 Github 才能评论。
+
+#### 字体
+
+...
+
+#### 灵感来源
+
+- [Namchee](https://www.namchee.dev)
+- [Dul](https://www.dzrgo.com)
+- [Manu](https://manuelmoreale.com)
+- [Mellow](https://mellow.dev)
+- [小赵同学](https://usj.cc)
+
 ---
 
-还在编写...
-
-如果你发现了问题或错误，请给我留言或邮件。
+🫡如果你发现了错误或遗漏，请给我留言或邮件。
